# CDCG

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: Array.cpp  BabyVector.cpp  Debug.cpp  LazyArray.cpp  Overload.cpp  Range.cpp  SBOVector.cpp  ScopedTimer.cpp  SmallVector.cpp  compose.cpp
header_only/: Array.hpp  Range.hpp  Range.hpp.gch
include/: Array.hpp  BabyVector.hpp  DaddyVector.hpp  Debug.hpp  LazyArray.hpp  LazyArrayBase.hpp  Overload.hpp  Range.hpp  SBOVector.hpp  ScopedTimer.hpp  SmallVector.hpp  SmallVectorInterface.hpp  compose.hpp
src/: Debug.cpp  ScopedTimer.cpp
tests/: LazyArray-test.cpp  LazyArraytest.cpp  Overload-test.cpp  Range-test.cpp  SmallVector-test.cpp  compose-test.cpp  ex.cpp  main-test.cpp
